[package]
name = "sqltick"
version = "0.1.0"
authors = ["zhangchunzhong <zczxyz@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = { version = "0.6.1", features = ["serde_json", "serde"]}
serde_json = "1.0.59"